# Currentscape

./: .gitignore  .gitlab-ci.yml  .gitreview  .pylintrc  .readthedocs.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  COPYING  LICENSE.txt  Makefile  README.md  README.rst  Tutorial.rst  currentscape.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  test.yml
currentscape/: __init__.py  config_parser.py  currents.py  currentscape.py  data_processing.py  datasets.py  ions.py  legends.py  mapper.py  plotting.py  subplots.py  version.py  voltages.py
doc/source/: api.rst  conf.py  dependencies.rst  index.rst  installation.rst  tutorial.rst
examples/: config.json  get_currents.py  integrate_single_compartment_and_plot_currentscape.py  single_compartment.py
examples/original_paper_plot/: LICENSE.txt  LICENSE_CC0-1.0  config.json  get_currents.py  integrate_single_compartment_and_plot_currentscape.py
examples/parameters-and-initial-conditions/: initial-conditions.txt  (+4 more)
extract_currs/: YeoJohnson.py  __init__.py  features.py  load.py  locations.py  main_func.py  output.py  protocols.py  protocols_func.py  recordings.py  stimuli.py
tests/: extract_bNAC_config.json  test_currentscape_config_parser.py  test_currentscape_currents.py  test_currentscape_dataprocessing.py  test_currentscape_datasets.py  test_currentscape_from_paper.py  test_currentscape_functions.py  test_currentscape_ions.py  test_currentscape_mapper.py  test_currentscape_plotting.py  test_extract_currents.py  test_extract_currents_load.py  test_unit_extract_currents.py  test_use_case_example.py  utils.py
(+13 files in other folders)
